--- a/BabelfishCompassUser.Optimistic.cfg
+++ b/BabelfishCompassUser.Optimistic.cfg
@@ -816,6 +816,7 @@ default_classification=Ignored
 
 
 [Extended property type]
+default_classification=Ignored
 
 
 [Datetime converted to (VAR)BINARY]
@@ -841,7 +842,11 @@ default_classification=Ignored
 
 [DROP SENSITIVITY CLASSIFICATION]
 
+
 [FULLTEXT INDEX]
 
 
 [FULLTEXT CONTAINS]
+
+
+# end
