--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,10 +15,10 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 4.0.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Feb-2024                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Apr-2024                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
 
 # Basic principle: 
@@ -141,6 +141,8 @@ list=HIERARCHYID,GEOGRAPHY,GEOMETRY,TIMESTAMP,ROWVERSION,CURSOR,XML,XML(xmlschem
 # all other datatypes (not mentioned here) are supported
 supported-1.0.0=XML,CURSOR
 supported-1.2.0=TIMESTAMP,ROWVERSION
+supported-3.5.0-3.*=GEOGRAPHY,GEOMETRY
+supported-4.1.0=GEOGRAPHY,GEOMETRY
 report_group-HIERARCHYID=HIERARCHYID
 report_group-XML=XML,XML(xmlschema),XML COLUMN_SET FOR ALL_SPARSE_COLUMNS
 report_group-Cursors=CURSOR
@@ -203,6 +205,8 @@ complexity_score-MEDIUM=EXIST,VALUE,QUERY,NODES
 rule=for_clause
 list=SELECT FOR JSON AUTO,SELECT FOR JSON AUTO ROOT,SELECT FOR JSON AUTO INCLUDE_NULL_VALUES,SELECT FOR JSON AUTO WITHOUT_ARRAY_WRAPPER,SELECT FOR JSON PATH,SELECT FOR JSON PATH ROOT,SELECT FOR JSON PATH INCLUDE_NULL_VALUES,SELECT FOR JSON PATH WITHOUT_ARRAY_WRAPPER
 supported-2.3.0=SELECT FOR JSON PATH,SELECT FOR JSON PATH ROOT,SELECT FOR JSON PATH INCLUDE_NULL_VALUES,SELECT FOR JSON PATH WITHOUT_ARRAY_WRAPPER
+supported-3.5.0-3.*=SELECT FOR JSON AUTO,SELECT FOR JSON AUTO ROOT,SELECT FOR JSON AUTO INCLUDE_NULL_VALUES,SELECT FOR JSON AUTO WITHOUT_ARRAY_WRAPPER
+supported-4.1.0=SELECT FOR JSON AUTO,SELECT FOR JSON AUTO ROOT,SELECT FOR JSON AUTO INCLUDE_NULL_VALUES,SELECT FOR JSON AUTO WITHOUT_ARRAY_WRAPPER
 report_group=JSON
 complexity_score=HIGH
 
@@ -214,6 +218,8 @@ complexity_score=HIGH
 
 [Geospatial features]
 rule=function_call
+supported-3.5.0-3.*=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT
+supported-4.1.0=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT
 report_group=Geospatial
 complexity_score=HIGH
 
@@ -247,6 +253,7 @@ supported-3.1.0=OPENQUERY
 supported-3.2.0=CONTEXT_INFO,ROWCOUNT_BIG,DATABASE_PRINCIPAL_ID,TIMEFROMPARTS,DATETIME2FROMPARTS
 supported-3.3.0=PARSENAME,EOMONTH,HOST_ID,SMALLDATETIMEFROMPARTS
 supported-3.4.0=SWITCHOFFSET,TODATETIMEOFFSET,COL_NAME,COL_LENGTH,DATETRUNC,IDENTITY,TYPE_ID,TYPE_NAME
+reviewmanually-3.5.0-3.*=CONTAINS
 reviewmanually-4.0.0=CONTAINS
 default_classification-ReviewSemantics=NEWSEQUENTIALID
 report_group-Filestream=FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME
@@ -521,6 +528,8 @@ complexity_score=LOW
 rule=drop_index
 list=INDEX ON TABLE,INDEX ON SCHEMA.TABLE,TABLE.INDEX,SCHEMA.TABLE.INDEX
 supported-1.0.0=INDEX ON TABLE
+supported-3.5.0-3.*=INDEX ON SCHEMA.TABLE,TABLE.INDEX,SCHEMA.TABLE.INDEX
+supported-4.1.0=INDEX ON SCHEMA.TABLE,TABLE.INDEX,SCHEMA.TABLE.INDEX
 report_group=DDL  
 complexity_score=LOW
 
@@ -614,6 +623,7 @@ complexity_score=HIGH
 rule=create_or_alter_dml_trigger
 list=TABLE,VIEW
 supported-1.2.0=TABLE
+supported-3.5.0-3.*=VIEW
 supported-4.0.0=VIEW
 report_group=Triggers
 complexity_score=HIGH
@@ -695,6 +705,8 @@ complexity_score-HIGH=EXTERNAL,CLR,ATOMIC NATIVELY COMPILED,ENCRYPTION
 [Missing AS keyword in scalar CREATE FUNCTION]
 rule=create_or_alter_function
 list=USER-DEFINED DATATYPE,BIT,DATETIME,DATETIME2,SMALLDATETIME,DATETIMEOFFSET,TIMESTAMP,ROWVERSION,UNIQUEIDENTIFIER,SQL_VARIANT,TINYINT,CHAR,VARCHAR,NCHAR,NVARCHAR,BINARY,VARBINARY
+supported-3.5.0-3.*=*
+supported-4.1.0=*
 report_group=Functions
 complexity_score=LOW
 
@@ -1020,6 +1032,8 @@ supported-3.1.0=linked_logins,servers
 supported-3.2.0=sysusers,syslogins
 supported-3.3.0=extended_properties
 supported-3.4.0=database_permissions,server_role_members
+supported-3.5.0-3.*=availability_groups,availability_replicas
+supported-4.1.0=availability_groups,availability_replicas
 
 [INFORMATION_SCHEMA]
 rule=full_object_name
@@ -1045,6 +1059,8 @@ supported-3.1.0=sp_linkedservers,sp_addlinkedserver,sp_dropserver,sp_addlinkedsr
 supported-3.2.0=sp_serveroption
 supported-3.3.0=sp_testlinkedserver,sp_enum_oledb_providers,sp_addextendedproperty,sp_updateextendedproperty,sp_dropextendedproperty
 supported-3.4.0=sp_who,sp_changedbowner
+supported-3.5.0-3.*=sp_procedure_params_100_managed
+supported-4.1.0=sp_procedure_params_100_managed
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
@@ -1162,18 +1178,24 @@ complexity_score=MEDIUM
 [Comparison operator]
 rule=comparison_operator
 list=!>,!<
+supported-3.5.0-3.*=*
+supported-4.1.0=*
 report_group=Operators
 complexity_score=LOW
 
 [Compound operator containing whitespace]
 rule=comparison_operator
 list=<=,>=,<>,!=,!>,!<,*=,=*
+supported-3.5.0-3.*=*
+supported-4.1.0=*
 report_group=Operators
 complexity_score=LOW
 
 [PG operator requiring whitespace]
 rule=comparison_operator
 list==@@,>@@,<@@
+supported-3.5.0-3.*=*
+supported-4.1.0=*
 report_group=Operators
 complexity_score=LOW
 
@@ -1529,6 +1551,7 @@ list=SEQUENCE,SYNONYM,QUEUE,ASSEMBLY,AGGREGATE,APPLICATION ROLE,ASYMMETRIC KEY,C
 supported-1.0.0=SEQUENCE,LOGIN
 supported-1.2.0=USER
 supported-2.1.0=ROLE
+supported-3.5.0-3.*=FULLTEXT INDEX
 supported-4.0.0=FULLTEXT INDEX
 report_group-DDL=SEQUENCE,SYNONYM,DEFAULT,RULE
 report_group-Users=LOGIN,SERVER ROLE,ROLE
@@ -1569,9 +1592,11 @@ complexity_score=HIGH
 
 [Syntax Issues]
 rule=update_statement,delete_statement
-list=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN FUNCTION,UPDATE CORRELATION SET UNQUALIFIED COLUMN,UPDATE QUALIFIED SET COLUMN,NO COMMA COLUMN TABCONSTRAINT
+list=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN FUNCTION,UPDATE CORRELATION SET UNQUALIFIED COLUMN,UPDATE QUALIFIED SET COLUMN,NO COMMA COLUMN TABCONSTRAINT,STRING_AGG() WORKAROUND WITH FOR XML PATH
 supported-2.4.0=UPDATE CORRELATION SET UNQUALIFIED COLUMN,UPDATE QUALIFIED SET COLUMN
 supported-3.2.0=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN FUNCTION
+supported-3.5.0-3.*=NO COMMA COLUMN TABCONSTRAINT
+supported-4.1.0=NO COMMA COLUMN TABCONSTRAINT
 report_group=Syntax Issues
 
 [Dynamic SQL]
@@ -1593,6 +1618,7 @@ default_classification=ReviewManually
 [FULLTEXT INDEX]
 rule=ddl_statement
 list=CREATE,DROP,ALTER
+supported-3.5.0-3.*=CREATE,DROP
 supported-4.0.0=CREATE,DROP
 
 [FULLTEXT CONTAINS]
@@ -1601,5 +1627,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=6b153fb4
+#file checksum=d21da65a
 #--- end ---------------------------------------------------------------------------
