--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,10 +15,10 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Apr-2024                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Jul-2024                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
 
 # Basic principle: 
@@ -218,10 +218,18 @@ complexity_score=HIGH
 
 [Geospatial features]
 rule=function_call
-supported-3.5.0-3.*=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT
-supported-4.1.0=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT
+supported-3.5.0-3.*=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT,STGEOMFROMTEXT,POINT
+supported-4.1.0=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT,STGEOMFROMTEXT,POINT
 report_group=Geospatial
 complexity_score=HIGH
+
+[STGEOMFROMTEXT]
+rule=function_call
+supported-3.5.0-3.*=POINT
+supported-4.1.0=POINT
+report_group=Geospatial
+complexity_score=HIGH
+default_classification-ReviewSemantics=expression
 
 [CURSOR variables]  
 rule=set_statement
@@ -600,6 +608,7 @@ complexity_score=HIGH
 
 [ALTER PROCEDURE]
 rule=create_or_alter_procedure
+supported-4.2.0=*
 report_group=Procedures
 complexity_score=HIGH
 
@@ -770,11 +779,13 @@ report_group=Databases
 
 [ALTER DATABASE]
 rule=alter_database,alter_database_scoped_configurations
+supported-4.2.0=* 
 report_group=Databases  
 
 [ALTER DATABASE options]
 rule=alter_database,alter_database_scoped_configuration
 list=SCOPED CONFIGURATION,CURRENT,MODIFY NAME,COLLATE,CATALOG_COLLATION,ALLOW_SNAPSHOT_ISOLATION,ANSI_NULLS,ANSI_NULL_DEFAULT,ANSI_PADDING,ANSI_WARNINGS,ARITHABORT,AUTO_CLOSE,AUTO_SHRINK,AUTO_UPDATE_STATISTICS,AUTO_UPDATE_STATISTICS_ASYNC,DB_CHAINING,COMPATIBILITY_LEVEL,CONCAT_NULL_YIELDS_NULL,CURSOR_CLOSE_ON_COMMIT,CURSOR_DEFAULT,DATE_CORRELATION_OPTIMIZATION,DELAYED_DURABILITY,DISABLE_BROKER,FILESTREAM,HONOR_BROKER_PRIORITY,MULTI_USER,NUMERIC_ROUNDABORT,PAGE_VERIFY,PARAMETERIZATION,QUERY_STORE,QUOTED_IDENTIFIER,READ_COMMITTED_SNAPSHOT,RECOVERY,RECURSIVE_TRIGGERS,TARGET_RECOVERY_TIME,TRUSTWORTHY,ACCELERATED_DATABASE_RECOVERY
+supported-4.2.0=MODIFY NAME
 report_group=Databases    
 
 [Delimited database name]  
@@ -1041,6 +1052,7 @@ list=CHECK_CONSTRAINTS,COLUMNS,COLUMN_DOMAIN_USAGE,COLUMN_PRIVILEGES,CONSTRAINT_
 supported-1.2.0=TABLES,COLUMNS,DOMAINS,TABLE_CONSTRAINTS
 supported-2.2.0=COLUMN_DOMAIN_USAGE,CONSTRAINT_COLUMN_USAGE,CHECK_CONSTRAINTS,ROUTINES,VIEWS
 supported-2.4.0=SCHEMATA,SEQUENCES
+supported-3.4.0=KEY_COLUMN_USAGE
 report_group=Catalogs
 
 [System Stored Procedures]
@@ -1061,6 +1073,7 @@ supported-3.3.0=sp_testlinkedserver,sp_enum_oledb_providers,sp_addextendedproper
 supported-3.4.0=sp_who,sp_changedbowner
 supported-3.5.0-3.*=sp_procedure_params_100_managed
 supported-4.1.0=sp_procedure_params_100_managed
+supported-4.2.0=sp_renamedb
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
@@ -1091,12 +1104,14 @@ complexity_score=HIGH
 rule=grant_statement
 supported-1.2.0=ALL PRIVILEGES ON OBJECT,SELECT ON OBJECT,INSERT ON OBJECT,UPDATE ON OBJECT,DELETE ON OBJECT,REFERENCES ON OBJECT,EXECUTE ON OBJECT
 supported-2.3.0=CONNECT
+supported-4.2.0=SELECT ON SCHEMA,INSERT ON SCHEMA,UPDATE ON SCHEMA,DELETE ON SCHEMA,REFERENCES ON SCHEMA,EXECUTE ON SCHEMA
 report_group=Permissions
 
 [REVOKE]
 rule=revoke_statement
 supported-1.2.0=ALL PRIVILEGES ON OBJECT,SELECT ON OBJECT,INSERT ON OBJECT,UPDATE ON OBJECT,DELETE ON OBJECT,REFERENCES ON OBJECT,EXECUTE ON OBJECT,CASCADE
 supported-2.3.0=CONNECT
+supported-4.2.0=SELECT ON SCHEMA,INSERT ON SCHEMA,UPDATE ON SCHEMA,DELETE ON SCHEMA,REFERENCES ON SCHEMA,EXECUTE ON SCHEMA
 report_group=Permissions
 
 [DENY]
@@ -1135,6 +1150,7 @@ complexity_score=HIGH
 rule=pivot_clause
 list=PIVOT,VIEW,CTE,JOIN
 supported-3.4.0=PIVOT
+supported-4.2.0=CTE,JOIN
 report_group=DML
 
 [SELECT..UNPIVOT]
@@ -1627,5 +1643,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=d21da65a
+#file checksum=1dc5386f
 #--- end ---------------------------------------------------------------------------
