--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -18,7 +18,7 @@
 valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Sep-2024                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Oct-2024                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
 
 # Basic principle: 
@@ -451,7 +451,7 @@ complexity_score=HIGH
 [Index options]
 rule=index_option
 list=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION,BUCKET_COUNT,SORTED_DATA,RESUMABLE,MAX_DURATION,XML_COMPRESSION,ALLOW_DUP_ROW,IGNORE_DUP_ROW
-default_classification=Ignored
+default_classification-Ignored=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION,BUCKET_COUNT,SORTED_DATA,RESUMABLE,MAX_DURATION,XML_COMPRESSION
 report_group=DDL
 
 [Index attribute]
@@ -1648,5 +1648,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=859f38a7
+#file checksum=073e0fc4
 #--- end ---------------------------------------------------------------------------
