code changes for v.2024-10 (#124)
* code changes for v.2024-09

* code changes for v.2024-09

* changing version to 2024-10

* add additional @@ERROR codes supported

* code changes

* code changes

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,10 +15,10 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Jul-2024                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Oct-2024                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
 
 # Basic principle: 
@@ -126,7 +126,8 @@ supported-1.2.0=201,206,2733,8144,8145,8146
 supported-2.1.0=213
 supported-2.2.0=911
 supported-3.3.0=15003
-supported-3.4.0=330,6615
+supported-3.4.0=330,535,6615,9810
+supported-4.0.0=13600
 report_group=@@ERROR codes
 
 [Regular variable named @@v]
@@ -137,7 +138,7 @@ complexity_score=LOW
 
 [Datatypes]
 rule=id
-list=HIERARCHYID,GEOGRAPHY,GEOMETRY,TIMESTAMP,ROWVERSION,CURSOR,XML,XML(xmlschema),CHARACTER VARYING,NATIONAL CHARACTER,NATIONAL CHARACTER VARYING,NCHARACTER,NCHARACTER VARYING,XML COLUMN_SET FOR ALL_SPARSE_COLUMNS
+list=HIERARCHYID,GEOGRAPHY,GEOMETRY,TIMESTAMP,ROWVERSION,CURSOR,XML,XML(xmlschema),CHARACTER VARYING,NATIONAL CHARACTER,NATIONAL CHARACTER VARYING,NCHARACTER,NCHARACTER VARYING,XML COLUMN_SET FOR ALL_SPARSE_COLUMNS,EXTERNAL NAME
 # all other datatypes (not mentioned here) are supported
 supported-1.0.0=XML,CURSOR
 supported-1.2.0=TIMESTAMP,ROWVERSION
@@ -220,6 +221,7 @@ complexity_score=HIGH
 rule=function_call
 supported-3.5.0-3.*=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT,STGEOMFROMTEXT,POINT
 supported-4.1.0=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT,STGEOMFROMTEXT,POINT
+supported-4.3.0=STCONTAINS,STEQUALS,STAREA
 report_group=Geospatial
 complexity_score=HIGH
 
@@ -261,8 +263,7 @@ supported-3.1.0=OPENQUERY
 supported-3.2.0=CONTEXT_INFO,ROWCOUNT_BIG,DATABASE_PRINCIPAL_ID,TIMEFROMPARTS,DATETIME2FROMPARTS
 supported-3.3.0=PARSENAME,EOMONTH,HOST_ID,SMALLDATETIMEFROMPARTS
 supported-3.4.0=SWITCHOFFSET,TODATETIMEOFFSET,COL_NAME,COL_LENGTH,DATETRUNC,IDENTITY,TYPE_ID,TYPE_NAME
-reviewmanually-3.5.0-3.*=CONTAINS
-reviewmanually-4.0.0=CONTAINS
+reviewmanually-3.5.0=CONTAINS
 default_classification-ReviewSemantics=NEWSEQUENTIALID
 report_group-Filestream=FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME
 report_group-Fulltext Search=CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY
@@ -320,6 +321,7 @@ report_group=Built-in functions
 
 [STRING_AGG() WITHIN GROUP]
 rule=function_call
+supported-4.3.0=*
 report_group=Built-in functions
 
 [FORMAT() culture]
@@ -449,8 +451,8 @@ complexity_score=HIGH
 
 [Index options]
 rule=index_option
-list=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION,BUCKET_COUNT,SORTED_DATA,RESUMABLE,MAX_DURATION,XML_COMPRESSION
-default_classification=Ignored
+list=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION,BUCKET_COUNT,SORTED_DATA,RESUMABLE,MAX_DURATION,XML_COMPRESSION,ALLOW_DUP_ROW,IGNORE_DUP_ROW
+default_classification-Ignored=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION,BUCKET_COUNT,SORTED_DATA,RESUMABLE,MAX_DURATION,XML_COMPRESSION
 report_group=DDL
 
 [Index attribute]
@@ -473,7 +475,8 @@ default_classification=ReviewSemantics
 
 [Partitioning]
 rule=create_table,alter_table,create_index,alter_index,truncate_table
-list=CREATE TABLE,ALTER TABLE SWITCH,ALTER TABLE REBUILD,ALTER TABLE SPLIT,ALTER TABLE MERGE,ALTER INDEX REBUILD,CREATE INDEX,TRUNCATE TABLE,$PARTITION,CREATE PARTITION SCHEME,ALTER PARTITION SCHEME,CREATE PARTITION FUNCTION,ALTER PARTITION FUNCTION,DROP PARTITION SCHEME,DROP PARTITION SCHEME
+list=CREATE TABLE,ALTER TABLE SWITCH,ALTER TABLE REBUILD,ALTER TABLE SPLIT,ALTER TABLE MERGE,ALTER INDEX REBUILD,CREATE INDEX,TRUNCATE TABLE,$PARTITION,CREATE PARTITION SCHEME,ALTER PARTITION SCHEME,CREATE PARTITION FUNCTION RANGE LEFT,CREATE PARTITION FUNCTION RANGE RIGHT,ALTER PARTITION FUNCTION,DROP PARTITION FUNCTION,DROP PARTITION SCHEME,SQL_VARIANT
+supported-4.3.0=CREATE PARTITION FUNCTION RANGE RIGHT,CREATE PARTITION SCHEME,DROP PARTITION FUNCTION,DROP PARTITION SCHEME,$PARTITION,CREATE TABLE,CREATE INDEX
 report_group=DDL
 complexity_score=HIGH
 
@@ -632,8 +635,7 @@ complexity_score=HIGH
 rule=create_or_alter_dml_trigger
 list=TABLE,VIEW
 supported-1.2.0=TABLE
-supported-3.5.0-3.*=VIEW
-supported-4.0.0=VIEW
+supported-3.5.0=VIEW
 report_group=Triggers
 complexity_score=HIGH
 
@@ -676,6 +678,7 @@ rule=create_or_alter_procedure
 list=EXTERNAL,ATOMIC NATIVELY COMPILED,ENCRYPTION,RECOMPILE,SCHEMABINDING,WITHOUT SCHEMABINDING,EXECUTE AS OWNER,EXECUTE AS CALLER,EXECUTE AS SELF,EXECUTE AS USER
 supported-1.0.0=WITHOUT SCHEMABINDING
 supported-2.4.0=EXECUTE AS CALLER
+supported-4.3.0=RECOMPILE
 default_classification-ReviewSemantics=EXECUTE AS OWNER,EXECUTE AS CALLER
 default_classification-ReviewPerformance=RECOMPILE
 report_group=Procedures
@@ -685,7 +688,8 @@ complexity_score-LOW=RECOMPILE
 [Execute procedure options]
 rule=execute_body
 list=RECOMPILE,RESULT SETS,RESULT SETS NONE,RESULT SETS UNDEFINED
-supported-1.0.0=RESULT SETS,RESULT SETS NONE,RESULT SETS UNDEFINED
+ignored-1.0.0=RESULT SETS,RESULT SETS NONE,RESULT SETS UNDEFINED
+supported-4.3.0=RECOMPILE
 default_classification-ReviewPerformance=RECOMPILE
 complexity_score-LOW=RECOMPILE
 report_group=Procedures
@@ -772,9 +776,11 @@ report_group=Procedures
 
 [CREATE DATABASE options]
 rule=create_database
-list=COLLATE,CATALOG_COLLATION,CATALOG_COLLATION DATABASE_DEFAULT,ALLOW_SNAPSHOT_ISOLATION,ANSI_NULLS,ANSI_NULL_DEFAULT,ANSI_PADDING,ANSI_WARNINGS,ARITHABORT,AUTO_CLOSE,AUTO_SHRINK,AUTO_UPDATE_STATISTICS,AUTO_UPDATE_STATISTICS_ASYNC,DB_CHAINING,COMPATIBILITY_LEVEL,CONCAT_NULL_YIELDS_NULL,CONTAINMENT=PARTIAL,CONTAINMENT=NONE,CURSOR_CLOSE_ON_COMMIT,CURSOR_DEFAULT,DATE_CORRELATION_OPTIMIZATION,DELAYED_DURABILITY,DISABLE_BROKER,FILESTREAM,HONOR_BROKER_PRIORITY,MULTI_USER,NUMERIC_ROUNDABORT,PAGE_VERIFY,PARAMETERIZATION,QUERY_STORE,QUOTED_IDENTIFIER,READ_COMMITTED_SNAPSHOT,RECOVERY,RECURSIVE_TRIGGERS,TARGET_RECOVERY_TIME,TRUSTWORTHY
+list=COLLATE,COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS,COLLATE ANY,CATALOG_COLLATION,CATALOG_COLLATION DATABASE_DEFAULT,ALLOW_SNAPSHOT_ISOLATION,ANSI_NULLS,ANSI_NULL_DEFAULT,ANSI_PADDING,ANSI_WARNINGS,ARITHABORT,AUTO_CLOSE,AUTO_SHRINK,AUTO_UPDATE_STATISTICS,AUTO_UPDATE_STATISTICS_ASYNC,DB_CHAINING,COMPATIBILITY_LEVEL,CONCAT_NULL_YIELDS_NULL,CONTAINMENT=PARTIAL,CONTAINMENT=NONE,CURSOR_CLOSE_ON_COMMIT,CURSOR_DEFAULT,DATE_CORRELATION_OPTIMIZATION,DELAYED_DURABILITY,DISABLE_BROKER,FILESTREAM,HONOR_BROKER_PRIORITY,MULTI_USER,NUMERIC_ROUNDABORT,PAGE_VERIFY,PARAMETERIZATION,QUERY_STORE,QUOTED_IDENTIFIER,READ_COMMITTED_SNAPSHOT,RECOVERY,RECURSIVE_TRIGGERS,TARGET_RECOVERY_TIME,TRUSTWORTHY
 supported-1.0.0=CONTAINMENT=NONE
-ignored-2.4.0=COLLATE,CATALOG_COLLATION DATABASE_DEFAULT
+ignored-2.4.0=CATALOG_COLLATION DATABASE_DEFAULT
+ignored-2.4.0=COLLATE
+supported-3.1.0=COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS
 report_group=Databases
 
 [ALTER DATABASE]
@@ -1045,6 +1051,8 @@ supported-3.3.0=extended_properties
 supported-3.4.0=database_permissions,server_role_members
 supported-3.5.0-3.*=availability_groups,availability_replicas
 supported-4.1.0=availability_groups,availability_replicas
+supported-4.2.0=login_token,user_token
+supported-4.3.0=sequences,partition_functions,partition_schemes,partition_parameters,partition_range_values,destination_data_spaces
 
 [INFORMATION_SCHEMA]
 rule=full_object_name
@@ -1567,8 +1575,7 @@ list=SEQUENCE,SYNONYM,QUEUE,ASSEMBLY,AGGREGATE,APPLICATION ROLE,ASYMMETRIC KEY,C
 supported-1.0.0=SEQUENCE,LOGIN
 supported-1.2.0=USER
 supported-2.1.0=ROLE
-supported-3.5.0-3.*=FULLTEXT INDEX
-supported-4.0.0=FULLTEXT INDEX
+supported-3.5.0=FULLTEXT INDEX
 report_group-DDL=SEQUENCE,SYNONYM,DEFAULT,RULE
 report_group-Users=LOGIN,SERVER ROLE,ROLE
 report_group-Fulltext Search=FULLTEXT CATALOG,FULLTEXT INDEX,FULLTEXT STOPLIST
@@ -1634,8 +1641,7 @@ default_classification=ReviewManually
 [FULLTEXT INDEX]
 rule=ddl_statement
 list=CREATE,DROP,ALTER
-supported-3.5.0-3.*=CREATE,DROP
-supported-4.0.0=CREATE,DROP
+supported-3.5.0=CREATE,DROP
 
 [FULLTEXT CONTAINS]
 rule=function_call
@@ -1643,5 +1649,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=1dc5386f
+#file checksum=641eb587
 #--- end ---------------------------------------------------------------------------
