--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -781,6 +781,7 @@ supported-1.0.0=CONTAINMENT=NONE
 ignored-2.4.0=CATALOG_COLLATION DATABASE_DEFAULT
 ignored-2.4.0=COLLATE
 supported-3.1.0=COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS
+#supported-4.4.0=COLLATE ANY
 report_group=Databases
 
 [ALTER DATABASE]
@@ -1223,6 +1224,11 @@ supported-4.1.0=*
 report_group=Operators
 complexity_score=LOW
 
+[Unary string '+' operator]
+rule=expression
+report_group=Operators
+complexity_score=LOW
+
 [DISTINCT FROM]
 rule=distinct_from_operator
 report_group=Operators
@@ -1649,5 +1655,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=641eb587
+#file checksum=5adc6950
 #--- end ---------------------------------------------------------------------------
