--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -1223,6 +1223,11 @@ supported-4.1.0=*
 report_group=Operators
 complexity_score=LOW
 
+[Unary string '+' operator]
+rule=expression
+report_group=Operators
+complexity_score=LOW
+
 [DISTINCT FROM]
 rule=distinct_from_operator
 report_group=Operators
@@ -1649,5 +1654,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=641eb587
+#file checksum=5adc6950
 #--- end ---------------------------------------------------------------------------
