autoddl continues after inaccessible database

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -21,7 +21,7 @@ file_format=2                           # version number for format of this .cfg
 file_timestamp=Oct-2024                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
 
-# Basic principle: 
+# Basic principle:
 #   - if a feature is not listed in this file, then it is supported by Babelfish
 #   - features listed in this file are marked supported in a particular Babelfish version, 
 #   - supported in a range of versions, or not supported at all
@@ -781,6 +781,7 @@ supported-1.0.0=CONTAINMENT=NONE
 ignored-2.4.0=CATALOG_COLLATION DATABASE_DEFAULT
 ignored-2.4.0=COLLATE
 supported-3.1.0=COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS
+#supported-4.4.0=COLLATE ANY
 report_group=Databases
 
 [ALTER DATABASE]
@@ -1093,6 +1094,14 @@ rule=execute_body
 supported-3.2.0=arg2=QUERY TIMEOUT
 supported-3.3.0=arg2=CONNECT TIMEOUT
 complexity_score=HIGH
+
+[sp_rename]
+rule=execute_body
+list=COLUMN,DATABASE,INDEX,OBJECT,STATISTICS,USERDATATYPE
+supported-2.4.0=arg3=OBJECT
+supported-3.2.0=arg3=COLUMN,USERDATATYPE
+supported-4.2.0=arg3=DATABASE
+complexity_score=MEDIUM
 
 [Extended property type]
 rule=execute_body
@@ -1654,5 +1663,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=5adc6950
+#file checksum=9b197c08
 #--- end ---------------------------------------------------------------------------
