add check for global @@variables

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -18,7 +18,7 @@
 valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Oct-2024                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Nov-2024                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
 
 # Basic principle:
@@ -108,7 +108,7 @@ file_timestamp=Oct-2024                 # identifies the version of this file, t
 
 [@@variable]
 rule=expression
-list=@@CONNECTIONS,@@CPU_BUSY,@@CURSOR_ROWS,@@DATEFIRST,@@DBTS,@@ERROR,@@FETCH_STATUS,@@IDENTITY,@@IDLE,@@IO_BUSY,@@LANGID,@@LANGUAGE,@@LOCK_TIMEOUT,@@MAX_CONNECTIONS,@@MAX_PRECISION,@@NESTLEVEL,@@OPTIONS,@@PACKET_ERRORS,@@PACK_RECEIVED,@@PACK_SENT,@@PROCID,@@REMSERVER,@@ROWCOUNT,@@SERVERNAME,@@SERVICENAME,@@SPID,@@TEXTSIZE,@@TIMETICKS,@@TOTAL_ERRORS,@@TOTAL_READ,@@TOTAL_WRITE,@@TRANCOUNT,@@VERSION,@@MICROSOFTVERSION
+list=@@CONNECTIONS,@@CPU_BUSY,@@CURSOR_ROWS,@@DATEFIRST,@@DBTS,@@ERROR,@@FETCH_STATUS,@@IDENTITY,@@IDLE,@@IO_BUSY,@@LANGID,@@LANGUAGE,@@LOCK_TIMEOUT,@@MAX_CONNECTIONS,@@MAX_PRECISION,@@NESTLEVEL,@@OPTIONS,@@PACKET_ERRORS,@@PACK_RECEIVED,@@PACK_SENT,@@PROCID,@@REMSERVER,@@ROWCOUNT,@@SERVERNAME,@@SERVICENAME,@@SPID,@@TEXTSIZE,@@TIMETICKS,@@TOTAL_ERRORS,@@TOTAL_READ,@@TOTAL_WRITE,@@TRANCOUNT,@@VERSION,@@MICROSOFTVERSION,@@PGERROR
 supported-1.0.0=@@VERSION,@@SPID,@@ROWCOUNT,@@TRANCOUNT,@@IDENTITY,@@ERROR,@@FETCH_STATUS,@@MAX_PRECISION,@@SERVERNAME,@@DATEFIRST,@@OPTIONS
 supported-1.1.0=@@MICROSOFTVERSION,@@PROCID,@@MAX_CONNECTIONS,@@NESTLEVEL,@@CURSOR_ROWS
 supported-1.2.0=@@DBTS,@@LOCK_TIMEOUT,@@SERVICENAME
@@ -132,7 +132,6 @@ report_group=@@ERROR codes
 
 [Regular variable named @@v]
 rule=local_id_expr,execute_parameter
-# not currently supported: referencing local variables or parameters with leading '@@' 
 report_group=Identifiers
 complexity_score=LOW
 
@@ -781,7 +780,6 @@ supported-1.0.0=CONTAINMENT=NONE
 ignored-2.4.0=CATALOG_COLLATION DATABASE_DEFAULT
 ignored-2.4.0=COLLATE
 supported-3.1.0=COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS
-#supported-4.4.0=COLLATE ANY
 report_group=Databases
 
 [ALTER DATABASE]
@@ -1663,5 +1661,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=9b197c08
+#file checksum=3a1cdb0a
 #--- end ---------------------------------------------------------------------------
