report cross-db identity insert

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,7 +15,7 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0, 4.4.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
 file_timestamp=Nov-2024                 # identifies the version of this file, together with the latest Babelfish version supported
@@ -132,6 +132,7 @@ report_group=@@ERROR codes
 
 [Regular variable named @@v]
 rule=local_id_expr,execute_parameter
+supported-4.4.0=*
 report_group=Identifiers
 complexity_score=LOW
 
@@ -780,6 +781,7 @@ supported-1.0.0=CONTAINMENT=NONE
 ignored-2.4.0=CATALOG_COLLATION DATABASE_DEFAULT
 ignored-2.4.0=COLLATE
 supported-3.1.0=COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS
+#supported-4.4.0=COLLATE ANY
 report_group=Databases
 
 [ALTER DATABASE]
@@ -884,7 +886,7 @@ report_group=DML
 
 [Cross-database reference]
 rule=full_object_name
-list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS,CREATE TABLE,ALTER TABLE
+list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS,CREATE TABLE,ALTER TABLE,SET IDENTITY_INSERT
 supported-2.1.0=SELECT,INSERT,UPDATE,DELETE,SELECT..INTO
 supported-2.2.0=EXECUTE
 report_group=Identifiers
@@ -1661,5 +1663,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=3a1cdb0a
+#file checksum=7750c503
 #--- end ---------------------------------------------------------------------------
