Report cross-db identity insert (#133)
* report cross-db identity insert

* report cross-db identity insert

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -884,7 +884,7 @@ report_group=DML
 
 [Cross-database reference]
 rule=full_object_name
-list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS,CREATE TABLE,ALTER TABLE
+list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS,CREATE TABLE,ALTER TABLE,SET IDENTITY_INSERT
 supported-2.1.0=SELECT,INSERT,UPDATE,DELETE,SELECT..INTO
 supported-2.2.0=EXECUTE
 report_group=Identifiers
@@ -1661,5 +1661,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=3a1cdb0a
+#file checksum=1cb3cf1d
 #--- end ---------------------------------------------------------------------------
