--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -19,7 +19,7 @@ valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
 file_timestamp=Nov-2024                 # identifies the version of this file, together with the latest Babelfish version supported
-                                        # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
+                                        # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle:
 #   - if a feature is not listed in this file, then it is supported by Babelfish
@@ -1095,7 +1095,7 @@ complexity_score=HIGH
 
 [sp_rename]
 rule=execute_body
-list=COLUMN,DATABASE,INDEX,OBJECT,STATISTICS,USERDATATYPE
+list=COLUMN,DATABASE,INDEX,OBJECT,STATISTICS,USERDATATYPE,NULL_OR_BLANK
 supported-2.4.0=arg3=OBJECT
 supported-3.2.0=arg3=COLUMN,USERDATATYPE
 supported-4.2.0=arg3=DATABASE
@@ -1224,7 +1224,7 @@ complexity_score=LOW
 
 [PG operator requiring whitespace]
 rule=comparison_operator
-list==@@,>@@,<@@
+list==@@,>@@,<@@,<>@@,!=@@
 supported-3.5.0-3.*=*
 supported-4.1.0=*
 report_group=Operators
@@ -1661,5 +1661,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=1cb3cf1d
+#file checksum=17a3941b
 #--- end ---------------------------------------------------------------------------
