Support for Babelfish v.4.4.0

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -887,7 +887,7 @@ report_group=DML
 
 [Cross-database reference]
 rule=full_object_name
-list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS,CREATE TABLE,ALTER TABLE,SET IDENTITY_INSERT
+list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS,CREATE TABLE,ALTER TABLE,SET IDENTITY_INSERT,CREATE SYNONYM
 supported-2.1.0=SELECT,INSERT,UPDATE,DELETE,SELECT..INTO
 supported-2.2.0=EXECUTE
 report_group=Identifiers
@@ -1667,5 +1667,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=a5c34eba
+#file checksum=72d4288c
 #--- end ---------------------------------------------------------------------------
